# rust_synth

./: .gitignore  Cargo.toml  README.md  osc.config  osc.json
src/app/: Cargo.toml
src/app/src/: main.rs  synth.rs
src/audio/: Cargo.toml
src/audio/src/: audioengine.rs  lib.rs  player.rs  synthengine.rs
src/dsp/: Cargo.toml
src/dsp/src/: lib.rs
src/dsp/src/core/: buffers.rs  mod.rs  module.rs  osc_receiver.rs
src/dsp/src/modules/: mod.rs
src/dsp/src/modules/ops/: adder.rs  mod.rs  multiplier.rs
src/dsp/src/modules/oscillators/: basic.rs  grains.rs  granular copy.rs  granular.rs  mod.rs  wav copy.rs  wav.rs
src/dsp/src/modules/wave/: mod.rs  wave.rs
src/granular/: Cargo.toml  save.rs
src/granular/src/: errors.rs  event.rs  granular_ctrl.rs  granular_osc_receiver.rs  granular_osc_sender.rs  granular_synth.rs  lib.rs
src/viewer/: Cargo.toml
src/viewer/src/: main.rs
