[package]
name = "demoapp"
version = "0.0.1"
authors = ["Manuel Deval <manuel.deval@gmail.com>"]
edition = "2018"

[dependencies]
termion = "1.5.5"
audio = { path = "../audio" }
dsp = { path = "../dsp" }
crossbeam = "0.8.0"
granular = { path="../granular" }
anyhow = "1.0"
rosc = "0.5.1"
ring-channel = "0.8"

[[bin]]
name="demoapp"
path="src/main.rs"
