[package]
name = "granular"
version = "0.0.1"
authors = ["Manuel Deval <manuel.deval@gmail.com>"]
edition = "2018"

[dependencies]
dsp = { path = "../dsp" }
crossbeam = "0.8.0"
strum = "0.20"
strum_macros = "0.20"
thiserror= "1.0.24"
hound = "3.4.0"
rosc = "0.5.1"
ring-channel = "0.8"

[lib]
path="src/lib.rs"